--- a/common/translations/lang/hr.json
+++ b/common/translations/lang/hr.json
@@ -1,5 +1,5 @@
 {
-  "code": "en",
+  "code": "hr",
   "data": {
     "x_CancelReplaceTx": "Cancel or Replace Transaction",
     "x_CancelTx": "Cancel Transaction",
