--- a/common/translations/lang/hr.json
+++ b/common/translations/lang/hr.json
@@ -1,12 +1,12 @@
 {
   "code": "hr",
   "data": {
-    "x_CancelReplaceTx": "Cancel or Replace Transaction",
-    "x_CancelTx": "Cancel Transaction",
-    "x_PasswordDesc": "This password *encrypts* your private key. This does not act as a seed to generate your keys. **You will need this password + your private key to unlock your wallet.**",
-    "x_ReadMore": "Read More",
-    "x_ReplaceTx": "Replace Transaction",
-    "x_TransHash": "Transaction Hash",
+    "x_CancelReplaceTx": "Poništi ili zamijeni transakciju",
+    "x_CancelTx": "Poništi transakciju",
+    "x_PasswordDesc": "Ova lozinka *šifrira* vaš privatni ključ. Ovo nije seed kojim generitate svoj privatni ključ. **Za otključavanje svog novčanika bit će vam potrebna ova lozinka  + privatni ključ.**",
+    "x_ReadMore": "Pročitajte više",
+    "x_ReplaceTx": "Zamijeni transakciju",
+    "x_TransHash": "Hash Transakcije",
     "x_TXFee": "TX Fee",
     "x_TxHash": "TX Hash",
     "NAV_CheckTxStatus": "Check TX Status",
