--- a/common/translations/lang/hr.json
+++ b/common/translations/lang/hr.json
@@ -6,14 +6,14 @@
     "x_PasswordDesc": "Ova lozinka *šifrira* vaš privatni ključ. Ovo nije seed kojim generitate svoj privatni ključ. **Za otključavanje svog novčanika bit će vam potrebna ova lozinka  + privatni ključ.**",
     "x_ReadMore": "Pročitajte više",
     "x_ReplaceTx": "Zamijeni transakciju",
-    "x_TransHash": "Hash Transakcije",
-    "x_TXFee": "TX Fee",
+    "x_TransHash": "Hash transakcije",
+    "x_TXFee": "Tx naknada",
     "x_TxHash": "TX Hash",
-    "NAV_CheckTxStatus": "Check TX Status",
+    "NAV_CheckTxStatus": "Provjera TX Statusa",
     "NAV_TxStatus": "TX Status",
-    "tx_Details": "Transaction Details",
-    "tx_Summary": "During times of high volume (like during ICOs) transactions can be pending for hours, if not days. This tool aims to give you the ability to find and \"cancel\" / replace these TXs. ** This is not typically something you can do. It should not be relied upon & will only work when the TX Pools are full. [Please, read about this tool here.](https://support.mycrypto.com/topics/how-can-i-check-on-the-status-of-my-transaction-can-i-cancel-override-overwrite-replace-or-do-anything-once-a-transaction-has-been-sent)**",
-    "tx_notFound": "Transaction Not Found",
+    "tx_Details": "Detalji transakcije",
+    "tx_Summary": "Za vrijeme velikog obujma prometa (kao npr za vrijeme ICO-a) transakcije mogu biti na čekanju satima, a ponekad i danima. Ovaj alat daje vam mogućnost da pronađete i poništite \"cancel\" / zamijenite te transakcije. ** Ovaj postupak nije uobičajen i ne bi se trebalo uzdati u njega, on će raditi samo u slučajevima kada su transakcijski Pool-ovi puni [Molim vas pročitajte više o ovom alatu ovdje.](https://support.mycrypto.com/topics/how-can-i-check-on-the-status-of-my-transaction-can-i-cancel-override-overwrite-replace-or-do-anything-once-a-transaction-has-been-sent)**",
+    "tx_notFound": "Transakcija nije pronađena",
     "tx_notFound_1": "This TX cannot be found in the TX Pool of the node you are connected to.",
     "tx_notFound_2": "If you just sent the transaction, please wait 15 seconds and press the \"Check TX Status\" button again. ",
     "tx_notFound_3": "It could still be in the TX Pool of a different node, waiting to be mined.",
