--- a/common/translations/lang/hr.json
+++ b/common/translations/lang/hr.json
@@ -14,9 +14,9 @@
     "tx_Details": "Detalji transakcije",
     "tx_Summary": "Za vrijeme velikog obujma prometa (kao npr za vrijeme ICO-a) transakcije mogu biti na čekanju satima, a ponekad i danima. Ovaj alat daje vam mogućnost da pronađete i poništite \"cancel\" / zamijenite te transakcije. ** Ovaj postupak nije uobičajen i ne bi se trebalo uzdati u njega, on će raditi samo u slučajevima kada su transakcijski Pool-ovi puni [Molim vas pročitajte više o ovom alatu ovdje.](https://support.mycrypto.com/topics/how-can-i-check-on-the-status-of-my-transaction-can-i-cancel-override-overwrite-replace-or-do-anything-once-a-transaction-has-been-sent)**",
     "tx_notFound": "Transakcija nije pronađena",
-    "tx_notFound_1": "This TX cannot be found in the TX Pool of the node you are connected to.",
-    "tx_notFound_2": "If you just sent the transaction, please wait 15 seconds and press the \"Check TX Status\" button again. ",
-    "tx_notFound_3": "It could still be in the TX Pool of a different node, waiting to be mined.",
+    "tx_notFound_1": "Ovu TX nije moguće pronaći u TX Pool-u čvora na koji ste spojeni.",
+    "tx_notFound_2": "Ako ste upravo poslali transakciju, molim vas pričekajte 15 sekundi pa pritisnite \"Check TX Status\" gumb ponovo.",
+    "tx_notFound_3": "Moguće je da je još uvijek u TX Pool-u drugoga čvora i čeka da bude obrađena od strane minera.",
     "tx_notFound_4": "Please use the dropdown in the top-right & select a different ETH node (e.g. `ETH (Etherscan.io)` or `ETH (Infura.io)` or `ETH (MyCrypto)`) and check again.",
     "tx_foundInPending": "Pending Transaction Found",
     "tx_foundInPending_1": "Your transaction was located in the TX Pool of the node you are connected to. ",
