--- a/common/translations/lang/hr.json
+++ b/common/translations/lang/hr.json
@@ -17,21 +17,22 @@
     "tx_notFound_1": "Ovu TX nije moguće pronaći u TX Pool-u čvora na koji ste spojeni.",
     "tx_notFound_2": "Ako ste upravo poslali transakciju, molim vas pričekajte 15 sekundi pa pritisnite \"Check TX Status\" gumb ponovo.",
     "tx_notFound_3": "Moguće je da je još uvijek u TX Pool-u drugoga čvora i čeka da bude obrađena od strane minera.",
-    "tx_notFound_4": "Please use the dropdown in the top-right & select a different ETH node (e.g. `ETH (Etherscan.io)` or `ETH (Infura.io)` or `ETH (MyCrypto)`) and check again.",
-    "tx_foundInPending": "Pending Transaction Found",
-    "tx_foundInPending_1": "Your transaction was located in the TX Pool of the node you are connected to. ",
-    "tx_foundInPending_2": "It is currently pending (waiting to be mined). ",
-    "tx_foundInPending_3": "There is a chance you can \"cancel\" or replace this transaction. Unlock your wallet below.",
-    "tx_FoundOnChain": "Transaction Found",
-    "tx_FoundOnChain_1": "Your transaction was successfully mined and is on the blockchain.",
-    "tx_FoundOnChain_2": "**If you see a red `( ! )`, a `BAD INSTRUCTION` or `OUT OF GAS` error message**, it means that the transaction was not successfully *sent*. You cannot cancel or replace this transaction. Instead, send a new transaction. If you received an \"Out of Gas\" error, you should double the gas limit you specified originally.",
-    "tx_FoundOnChain_3": "**If you do not see any errors, your transaction was successfully sent.** Your ETH or Tokens are where you sent them. If you cannot see this ETH or Tokens credited in your other wallet / exchange account, and it has been 24+ hours since you sent, please [contact that service](https://support.mycrypto.com/topics/i-have-a-question-but-its-not-about-myetherwallet-dot-com-what-do-i-do). Send them the *link* to your transaction and ask them, nicely, to look into your situation.",
-    "GEN_Help_1": "Use your",
-    "GEN_Help_2": "to access your account.",
-    "GEN_Help_3": "Your device * is * your wallet.",
-    "GEN_Help_4": "Guides & FAQ",
-    "GEN_Help_5": "How to Create a Wallet",
-    "GEN_Help_6": "Getting Started",
+    "tx_notFound_4": "Molim vas da iz padajućeg menija gore desno izaberete drugi ETH čvor (npr `ETH (Etherscan.io)` ili `ETH (Infura.io)` ili `ETH (MyCrypto)`) pa provjerite ponovo.",
+    "tx_foundInPending": "Pronađena je transakcija na čekanju",
+    "tx_foundInPending_1": "Vaša transakcija je pronađena u TX Pool-u čvora na koji ste spojeni. ",
+    "tx_foundInPending_2": "Trenutno je na čekanju (čeka ona obradu od strane minera). ",
+    "tx_foundInPending_3": "Postoji šansa da ovusu transakciju poništite \"cancel\" ili zamijenite novom transakcijom. Otključajte svoj novčanik niže.",
+    "tx_FoundOnChain": "Transakcije je pronađena",
+    "tx_FoundOnChain_1": "Vaša transakcija je uspješno obrađena i nalazi se u blokchain-u.",
+    "tx_FoundOnChain_2": "**Ako vidite crveni `( ! )`,  `BAD INSTRUCTION` ili `OUT OF GAS` poruke greške**, to znači da transakcija nije uspješno *poslana*. Ovu transakciju ne možete poništiti ili zamijeniti novom. Umjesto toga napravite novu transakciju. Ako ste dobili \"Out of Gas\" grešku, udvostručite gas limit koji ste izvorno odredili.",
+    "tx_FoundOnChain_3": "**Ako se ne pojavi nijedna greška, vaša je transakcija uspješno poslana.** Vaši ETH tokeni su tamo gdje ste ih poslali. Ako vam ovi ETH tokeni nisu prispjeliu vaš drugi novčanik / račun u mjenjačnici, a prošlo je više od 24 sata od kako ste ih poslali, molim vas kontaktirajte podršku [contact that service](https://support.mycrypto.com/topics/i-have-a-question-but-its-not-about-myetherwallet-dot-com-what-do-i-do). Pošaljite im *link* vaše transakcije i pristojno ih zamolite da pogledaju o čemu se radi.",
+  
+    "GEN_Help_1": "Koristi svoj",
+    "GEN_Help_2": "da bi dohvatio svoj račun.",
+    "GEN_Help_3": "Tvoj uređaj * je * tvoj novčanik.",
+    "GEN_Help_4": "Uputstva & FAQ",
+    "GEN_Help_5": "Kako izraditi svoj novčanik",
+    "GEN_Help_6": "Počnimo",
     "GEN_Help_7": "Keep it safe · Make a backup · Don't share it with anyone · Don't lose it · It cannot be recovered if you lose it.",
     "GEN_Help_8": "Not Downloading a File? ",
     "GEN_Help_9": "Try using Google Chrome ",
