--- a/common/translations/lang/hr.json
+++ b/common/translations/lang/hr.json
@@ -33,58 +33,58 @@
     "GEN_Help_4": "Uputstva & FAQ",
     "GEN_Help_5": "Kako izraditi svoj novčanik",
     "GEN_Help_6": "Počnimo",
-    "GEN_Help_7": "Keep it safe · Make a backup · Don't share it with anyone · Don't lose it · It cannot be recovered if you lose it.",
-    "GEN_Help_8": "Not Downloading a File? ",
-    "GEN_Help_9": "Try using Google Chrome ",
-    "GEN_Help_10": "Right click & save file as. Filename: ",
-    "GEN_Help_11": "Don't open this file on your computer ",
-    "GEN_Help_12": "Use it to unlock your wallet via MyCrypto (or Mist, Geth, Parity and other wallet clients.) ",
-    "GEN_Help_13": "How to Back Up Your Keystore File ",
-    "GEN_Help_14": "What are these Different Formats? ",
-    "GEN_Help_15": "Preventing loss &amp; theft of your funds.",
-    "GEN_Help_16": "What are these Different Formats?",
-    "GEN_Help_17": "Why Should I?",
-    "GEN_Help_18": "To have a secondary backup.",
-    "GEN_Help_19": "In case you ever forget your password.",
-    "GEN_Help_20": "Cold Storage",
-    "GET_ConfButton": "I understand. Continue.",
-    "GEN_Label_5": "Save Your `Private Key`. ",
-    "GEN_Unlock": "Unlock your wallet to see your address",
-    "GAS_PRICE_Desc": "Gas Price is the amount you pay per unit of gas. `TX fee = gas price * gas limit` & is paid to miners for including your TX in a block. Higher the gas price = faster transaction, but more expensive. Default is `21 GWEI`.",
-    "GAS_LIMIT_Desc": "Gas limit is the amount of gas to send with your TX. `TX fee` = gas price * gas limit & is paid to miners for including your TX in a block. Increasing this number will not get your TX mined faster. Sending ETH = `21000`. Sending Tokens = ~`200000`.",
-    "NONCE_Desc": "The nonce is the number of transactions sent from a given address. It ensures transactions are sent in order & not more than once.",
-    "TXFEE_Desc": "The TX Fee is paid to miners for including your TX in a block. Is is the `gas limit` * `gas price`. [You can convert GWEI -> ETH here](https://www.mycrypto.com/helpers.html)",
-    "NAV_AddWallet": "Add Wallet ",
-    "NAV_BulkGenerate": "Bulk Generate ",
-    "NAV_Contact": "Contact ",
-    "NAV_Contracts": "Contracts ",
-    "NAV_DeployContract": "Deploy Contract ",
+    "GEN_Help_7": "Osigurajte se· Izradite sigurnosnu kopiju · Ne pokazujte to nikome · Nemojte izgubiti · Ako ovo izgubite nećete više moći obnoviti.",
+    "GEN_Help_8": "Ne skida datoteku? ",
+    "GEN_Help_9": "Pokušaj sa Google Chrome-om ",
+    "GEN_Help_10": "Desni klik pa save file as. Ime datoteke: ",
+    "GEN_Help_11": "Ne otvaraj ovu datoteku na svom računalu",
+    "GEN_Help_12": "Koristite ovo da otključate svoj novčanik putem MyCrypto (ili Mist, Geth, Parity ili drugih klijenata za novčanike.) ",
+    "GEN_Help_13": "Kako izrdaiti sigurnosnu kopiju svoje Keystore datoteke ",
+    "GEN_Help_14": "Što su ovi različiti formati? ",
+    "GEN_Help_15": "Sprečavanje gubitka &amp; krađe vaših sredstava.",
+    "GEN_Help_16": "Što su ovi različiti formati?",
+    "GEN_Help_17": "Zašto bih?",
+    "GEN_Help_18": "Da bi imao sekundarnu sigurnosnu kopiju.",
+    "GEN_Help_19": "U slučaju ako ikad zaboravite svoju lozinku.",
+    "GEN_Help_20": "Hladno spremište",
+    "GET_ConfButton": "Razumio sam. Nastavi.",
+    "GEN_Label_5": "Pohrani svoj `Private Key`. ",
+    "GEN_Unlock": "Otključaj svoj novčanik da vidiš svoju adresu",
+    "GAS_PRICE_Desc": "Gas Price je količina koju plaćate po jedinici gasa. `TX fee = gas price * gas limit` ovo se plaća minerima da bi ubacili vašu transakciju u blok. Veća gas cijena = brža transakcija, ali i skuplja. Defaultna vrijednost je `21 GWEI`.",
+    "GAS_LIMIT_Desc": "Gas limit je izbos gasa za slanje sa svojm TX. `TX fee` = gas price * gas limit ovo se plaća minerima da bi ubacili vašu transakciju u blok. Povećavanje ovog broja neće ubrzati obradu vaše TX. Slanje ETH = `21000`. Slanje tokena = ~`200000`.",
+    "NONCE_Desc": "Broj poslanih transakcija za datu adresu. Ovime se osigurava da su transakcije poslane redom ne više od jedne odjednom.",
+    "TXFEE_Desc": "TX naknada je plaćena minerima da bi ubacili vašu TX u blok. To je `gas limit` * `gas price`. [možete pretvoriti GWEI -> ETH ovdje](https://www.mycrypto.com/helpers.html)",
+    "NAV_AddWallet": "Dodaj novčanik ",
+    "NAV_BulkGenerate": "Skupna izrada ",
+    "NAV_Contact": "Kontakt ",
+    "NAV_Contracts": "Ugovori ",
+    "NAV_DeployContract": "Primijeni ugovor ",
     "NAV_ENS": "ENS",
-    "NAV_GenerateWallet_alt": "New Wallet ",
-    "NAV_GenerateWallet": "Create New Wallet ",
-    "NAV_Help": "Help ",
-    "NAV_InteractContract": "Interact with Contract ",
+    "NAV_GenerateWallet_alt": "Novi novčanik ",
+    "NAV_GenerateWallet": "Izradi novi novčanik ",
+    "NAV_Help": "Pomoć ",
+    "NAV_InteractContract": "Interakcija sa ugovorom ",
     "NAV_Multisig": "Multisig ",
-    "NAV_MyWallets": "My Wallets ",
-    "NAV_Offline": "Send Offline ",
-    "NAV_SendEther": "Send Ether & Tokens ",
-    "NAV_SendTokens": "Send Tokens ",
-    "NAV_SignMsg": "Sign Message ",
-    "NAV_Swap": "Swap ",
-    "NAV_ViewWallet": "View Wallet Info ",
-    "NAV_YourWallets": "Your Wallets ",
-    "x_Access": "Access ",
-    "x_AddessDesc": "Your Address can also be known as you `Account #` or your `Public Key`. It is what you share with people so they can send you Ether or Tokens. Find the colorful address icon. Make sure it matches your paper wallet & whenever you enter your address somewhere.",
-    "x_Address": "Your Address ",
-    "x_Cancel": "Cancel ",
+    "NAV_MyWallets": "Moji novčanici ",
+    "NAV_Offline": "Pošalji izvanmrežno ",
+    "NAV_SendEther": "Pošalji Ether i tokene ",
+    "NAV_SendTokens": "Pošalji Tokene ",
+    "NAV_SignMsg": "Potpiši poruku ",
+    "NAV_Swap": "Zamijeni ",
+    "NAV_ViewWallet": "Pogledaj informacije o novčaniku ",
+    "NAV_YourWallets": "Tvoji novčanici ",
+    "x_Access": "Pristup ",
+    "x_AddessDesc": "Vaša adresa može biti znana i kao vaš broj akaunta `Account #` ili vaš javni ključ `Public Key`. To je ono što dijelite drugima kako bi vam mogli poslati Ether ili tokene. Pronađite obojanu ikonu adrese. Provjerite da li odgovara vašem papirnatom novčaniku kad god negdje upisujete adresu.",
+    "x_Address": "YVaša adresas ",
+    "x_Cancel": "Poništi ",
     "x_Cipher": "Cipher Browser",
-    "x_CSV": "CSV file (unencrypted) ",
+    "x_CSV": "CSV datoteka (nekriptirana) ",
     "x_Download": "Download ",
-    "x_Json": "JSON File (unencrypted) ",
-    "x_JsonDesc": "This is the unencrypted, JSON format of your private key. This means you do not need the password but anyone who finds your JSON can access your wallet & Ether without the password. ",
-    "x_Keystore": "Keystore File (UTC / JSON · Recommended · Encrypted) ",
-    "x_Keystore2": "Keystore File ",
-    "x_KeystoreDesc": "This Keystore file matches the format used by Mist so you can easily import it in the future. It is the recommended file to download and back up. ",
+    "x_Json": "JSON datoteka (nekriptirana) ",
+    "x_JsonDesc": "Ovo je vaš privatni ključ u nekriptiranom obliku u JSON formatu. Ovo znači da ne trebate lozinku, ali znajte da svatko tko pronađe vašu JSON datoteku ima pristup vašem novčaniku i Etheru bez lozinke. ",
+    "x_Keystore": "Keystore datoteka (UTC / JSON · Preporučeno · Enkriptirano) ",
+    "x_Keystore2": "Keystore datoteka ",
+    "x_KeystoreDesc": "Ova Keystore datoteka odgovara formatu kojega upotrebljava Mist pa ju jednostavno možete unijetu ubuduće. Ovo je preporučena datoteka za skidanje i sigurnosno kopiranje. ",
     "x_MetaMask": "MetaMask",
     "x_Mist": "Mist",
     "x_Web3": "Web3",
