--- a/common/translations/lang/hr.json
+++ b/common/translations/lang/hr.json
@@ -88,23 +88,23 @@
     "x_MetaMask": "MetaMask",
     "x_Mist": "Mist",
     "x_Web3": "Web3",
-    "x_Mnemonic": "Mnemonic Phrase ",
-    "x_ParityPhrase": "Parity Phrase ",
-    "x_Password": "Password ",
-    "x_Print": "Print Paper Wallet ",
-    "x_PrintDesc": "ProTip: Click print and save this as a PDF, even if you do not own a printer! ",
-    "x_PrintShort": "Print ",
-    "x_PrivKey": "Private Key (unencrypted) ",
-    "x_PrivKey2": "Private Key ",
-    "x_PrivKeyDesc": "This is the unencrypted text version of your private key, meaning no password is necessary. If someone were to find your unencrypted private key, they could access your wallet without a password. For this reason, encrypted versions are typically recommended. ",
-    "x_Save": "Save ",
-    "x_TXT": "TXT file (unencrypted) ",
-    "x_Wallet": "Wallet ",
-    "CX_Tagline": "Open Source JavaScript Client-Side Ether Wallet Chrome Extension ",
-    "CX_Warning_1": "Make sure you have **external backups** of any wallets you store here. Many things could happen that would cause you to lose the data in this Chrome Extension, including uninstalling and reinstalling the extension. This extension is a way to easily access your wallets, **not** a way to back them up. ",
-    "MyCrypto_Tagline": "Open Source JavaScript Client-Side Ether Wallet ",
-    "MyCrypto_Warning_1": "Always check the URL before accessing your wallet or creating a new wallet. Beware of phishing sites! ",
-    "FOOTER_1": "Free, open-source, client-side interface for generating Ethereum wallets &amp; more. Interact with the Ethereum blockchain easily &amp; securely. Double-check the URL ( .com ) before unlocking your wallet.",
+    "x_Mnemonic": "Mnemonička fraza ",
+    "x_ParityPhrase": "Parity fraza ",
+    "x_Password": "Lozinka ",
+    "x_Print": "Ispis papirnatog novčanika ",
+    "x_PrintDesc": "Pro Savjet: Klikni na ispis i sačuvaj kao pdf datoteku čak i ako ne posjeduješ printer! ",
+    "x_PrintShort": "Ispis ",
+    "x_PrivKey": "Privatni ključ (nekriptirani) ",
+    "x_PrivKey2": "Privatni ključ ",
+    "x_PrivKeyDesc": "Ovo je nekriptirana tekstualna verzija vašeg privatnog ključa, što znači da vam nije potrebna lozinka. Ako bi nekto pronašao vaš nekriptirani privatni ključ, on bi imao pristup vašem računu i bez lozinke. Zbog ovoga se tipično preporuča enkriptirana verzija vašeg privatnog ključa.",
+    "x_Save": "Sačuvaj ",
+    "x_TXT": "TXT datoteka (nekriptirana) ",
+    "x_Wallet": "Novčanik ",
+    "CX_Tagline": "Open Source JavaScript Client-Side Chrome proširenje Ether novčanika ",
+    "CX_Warning_1": "Provjerite imate li eksternu sigurnosnu kopiju *external backups** novčanika koje ovdje pohranjujete. Mnoge stvari se mogu dogoditi koje bi uzrokovale gubitak vaših podataka iz ovog Chrome proširenja, uključujući deinstalaciju i ponovnu instalaciju Chrome proširenja. Ovo proširenje vam omogućuje da jednostavno pristupite vašem novčaniku. Ovo nije **not** sigurnosna kopija. ",
+    "MyCrypto_Tagline": "Open Source JavaScript Client-Side Ether novčanik ",
+    "MyCrypto_Warning_1": "Prije pristupanja svom novčaniku ili izrade novoga novčanika uvijek provjetite URL. Pazite se prevaranatskih stranica! ",
+    "FOOTER_1": "Slobodno, open-source, client-side sučelje za izradu Ethereum novčanika &amp; i ostalo. Upotrebljavajte Etereum blockchain lako i sigurno. Dvostruko provjerite URL ( .com ) prije negootključate svoj novčanik.",
     "FOOTER_1b": "Created by ",
     "FOOTER_2": "Donations greatly appreciated ",
     "FOOTER_3": "Client-side wallet generation by ",
