--- a/common/translations/lang/hr.json
+++ b/common/translations/lang/hr.json
@@ -26,7 +26,6 @@
     "tx_FoundOnChain_1": "Vaša transakcija je uspješno obrađena i nalazi se u blokchain-u.",
     "tx_FoundOnChain_2": "**Ako vidite crveni `( ! )`,  `BAD INSTRUCTION` ili `OUT OF GAS` poruke greške**, to znači da transakcija nije uspješno *poslana*. Ovu transakciju ne možete poništiti ili zamijeniti novom. Umjesto toga napravite novu transakciju. Ako ste dobili \"Out of Gas\" grešku, udvostručite gas limit koji ste izvorno odredili.",
     "tx_FoundOnChain_3": "**Ako se ne pojavi nijedna greška, vaša je transakcija uspješno poslana.** Vaši ETH tokeni su tamo gdje ste ih poslali. Ako vam ovi ETH tokeni nisu prispjeliu vaš drugi novčanik / račun u mjenjačnici, a prošlo je više od 24 sata od kako ste ih poslali, molim vas kontaktirajte podršku [contact that service](https://support.mycrypto.com/topics/i-have-a-question-but-its-not-about-myetherwallet-dot-com-what-do-i-do). Pošaljite im *link* vaše transakcije i pristojno ih zamolite da pogledaju o čemu se radi.",
-  
     "GEN_Help_1": "Koristi svoj",
     "GEN_Help_2": "da bi dohvatio svoj račun.",
     "GEN_Help_3": "Tvoj uređaj * je * tvoj novčanik.",
@@ -105,109 +104,109 @@
     "MyCrypto_Tagline": "Open Source JavaScript Client-Side Ether novčanik ",
     "MyCrypto_Warning_1": "Prije pristupanja svom novčaniku ili izrade novoga novčanika uvijek provjetite URL. Pazite se prevaranatskih stranica! ",
     "FOOTER_1": "Slobodno, open-source, client-side sučelje za izradu Ethereum novčanika &amp; i ostalo. Upotrebljavajte Etereum blockchain lako i sigurno. Dvostruko provjerite URL ( .com ) prije negootključate svoj novčanik.",
-    "FOOTER_1b": "Created by ",
-    "FOOTER_2": "Donations greatly appreciated ",
-    "FOOTER_3": "Client-side wallet generation by ",
-    "FOOTER_4": "Disclaimer ",
-    "sidebar_AccountInfo": "Account Information ",
-    "sidebar_AccountAddr": "Account Address ",
-    "sidebar_AccountBal": "Account Balance ",
-    "sidebar_TokenBal": "Token Balances ",
-    "sidebar_Equiv": "Equivalent Values ",
-    "sidebar_TransHistory": "Transaction History ",
-    "sidebar_donation": "MyCrypto is a free, open-source service dedicated to your privacy and security. The more donations we receive, the more time we spend creating new features, listening to your feedback, and giving you what you want. We are just two people trying to change the world. Help us? ",
-    "sidebar_donate": "Donate ",
-    "sidebar_thanks": "THANK YOU!!! ",
-    "sidebar_DisplayOnTrezor": "Display address on TREZOR",
-    "sidebar_DisplayOnLedger": "Display address on Ledger",
-    "decrypt_Access": "How would you like to access your wallet? ",
-    "decrypt_Title": "Select the format of your private key ",
-    "decrypt_Select": "Select a Wallet ",
-    "MNEM_1": "Please select the address you would like to interact with. ",
-    "MNEM_2": "Your single HD mnemonic phrase can access a number of wallets / addresses. Please select the address you would like to interact with at this time. ",
-    "MNEM_more": "More Addresses ",
-    "MNEM_prev": "Previous Addresses ",
+    "FOOTER_1b": "Izradio",
+    "FOOTER_2": "Cijenimo Vaše donacije",
+    "FOOTER_3": "Izrada Client-side novčanika od strane ",
+    "FOOTER_4": "Izjava o odricanju odgovornosti ",
+    "sidebar_AccountInfo": "Informacija o računu ",
+    "sidebar_AccountAddr": "Adresa računa ",
+    "sidebar_AccountBal": "Saldo računa",
+    "sidebar_TokenBal": "Saldo tokena ",
+    "sidebar_Equiv": "Ekvivalentna vrijednost ",
+    "sidebar_TransHistory": "Povijest transakcija ",
+    "sidebar_donation": "MyCrypto besplatan, open-source servis posvećen vašoj privatnosti i sigurnosti. Što više vaših donacija dobivamo, više vremena možemo posvetiti izradi novih mogućnosti, osluškivanju informacija od vas, i pružanju vama onoga što želite. Mi smo samo dvoje ljudi koji žele promijeniti svijet. Želite nam pomoći? ",
+    "sidebar_donate": "Donirajte ",
+    "sidebar_thanks": "HVALA VAM!!! ",
+    "sidebar_DisplayOnTrezor": "Prikaži adresu na TREZORU",
+    "sidebar_DisplayOnLedger": "Prikaži adresu na Ledgeru",
+    "decrypt_Access": "Kako želite pristupiti vašem novčaniku? ",
+    "decrypt_Title": "Izaberi format svoga privatnog ključa ",
+    "decrypt_Select": "Izaberite novčanik ",
+    "MNEM_1": "Molim vas odaberite adresu sa kojom želite interakciju.",
+    "MNEM_2": "Vaša jedinstvena HD mnemonička fraza omogućujue pristup većem broju novčanika / adresa. Molim vas izaberite adresu sa kojom sada želite nastaviti.",
+    "MNEM_more": "Još adresa ",
+    "MNEM_prev": "Prethodne adrese ",
     "x_Ledger": "Ledger ",
-    "ADD_Ledger_1": "Connect your Ledger Wallet ",
-    "ADD_Ledger_2": "Open the Ethereum application (or a contract application) ",
-    "ADD_Ledger_3": "Verify that Browser Support is enabled in Settings ",
-    "ADD_Ledger_4": "If no Browser Support is found in settings, verify that you have [Firmware >1.2](https://www.ledgerwallet.com/apps/manager) ",
-    "ADD_Ledger_0a": "You must access MyCrypto via a secure (SSL / HTTPS) connection to connect. ",
-    "ADD_Ledger_0b": "Re-open MyCrypto using [Chrome](https://www.google.com/chrome/browser/desktop/) or [Opera](https://www.opera.com/) ",
-    "ADD_Ledger_scan": "Connect to Ledger Wallet ",
-    "ADD_MetaMask": "Connect to MetaMask ",
+    "ADD_Ledger_1": "Spojite svoj Ledger hardverski novčanik ",
+    "ADD_Ledger_2": "Otvorite Ethereum aplikaciju (ili aplikaciju ugovora) ",
+    "ADD_Ledger_3": "Provjeri da je u settings omogućeno Browser Support ",
+    "ADD_Ledger_4": "Ako u ppstavkama nema Browser Support tada provjerite da vam je [Firmware >1.2](https://www.ledgerwallet.com/apps/manager) ",
+    "ADD_Ledger_0a": "MyCrypto-u morate pristupitiputem sigurne (SSL / HTTPS) veze da biste se spojili. ",
+    "ADD_Ledger_0b": "Ponovno otvorite MyCrypto uz pomoć [Chrome](https://www.google.com/chrome/browser/desktop/) ili [Opera](https://www.opera.com/) ",
+    "ADD_Ledger_scan": "Spoji na Ledger Novčanik ",
+    "ADD_MetaMask": "Spoji na MetaMask ",
     "x_Trezor": "TREZOR ",
-    "ADD_Trezor_scan": "Connect to TREZOR ",
+    "ADD_Trezor_scan": "Spoji na TREZOR ",
     "x_DigitalBitbox": "Digital Bitbox ",
-    "ADD_DigitalBitbox_0a": "Re-open MyCrypto on a secure (SSL) connection ",
-    "ADD_DigitalBitbox_0b": "Re-open MyCrypto using [Chrome](https://www.google.com/chrome/browser/desktop/) or [Opera](https://www.opera.com/) ",
-    "ADD_DigitalBitbox_scan": "Connect your Digital Bitbox ",
-    "ADD_Label_1": "What would you like to do? ",
-    "ADD_Radio_1": "Generate New Wallet ",
-    "ADD_Radio_2": "Select Your Wallet File (Keystore / JSON) ",
-    "ADD_Radio_2_alt": "Select Your Wallet File ",
-    "ADD_Radio_2_short": "SELECT WALLET FILE... ",
-    "ADD_Radio_3": "Paste/Type Your Private Key ",
-    "ADD_Radio_4": "Add an Account to Watch ",
-    "ADD_Radio_5": "Paste/Type Your Mnemonic ",
-    "ADD_Radio_5_Path": "Select HD derivation path ",
+    "ADD_DigitalBitbox_0a": "Ponovno otvorite MyCrypto na sigurnoj (SSL) vezi ",
+    "ADD_DigitalBitbox_0b": "Ponovno otvorite MyCrypto uz pomoć [Chrome](https://www.google.com/chrome/browser/desktop/) ili [Opera](https://www.opera.com/) ",
+    "ADD_DigitalBitbox_scan": "Spojite svoj Digital Bitbox ",
+    "ADD_Label_1": "Što biste sada željeli? ",
+    "ADD_Radio_1": "Izadi novi novčanik ",
+    "ADD_Radio_2": "Izaberite svoju datoteku novčanika (Keystore / JSON) ",
+    "ADD_Radio_2_alt": "Izaberite svoju datoteku novčanika ",
+    "ADD_Radio_2_short": "IZABERITE DATOTEKU NOVČANIKA... ",
+    "ADD_Radio_3": "Zalijepite/upišite svoj privatni ključ ",
+    "ADD_Radio_4": "Dodaj račun u nadzor ",
+    "ADD_Radio_5": "Zalijepite/upišite svoju mnemoničku frazu.",
+    "ADD_Radio_5_Path": "Izaberite HD derivation path ",
     "ADD_Radio_5_woTrezor": "(Jaxx, Metamask, Exodus, imToken)",
     "ADD_Radio_5_withTrezor": "(Jaxx, Metamask, Exodus, imToken, TREZOR)",
     "ADD_Radio_5_PathAlternative": "(Ledger)",
     "ADD_Radio_5_PathTrezor": "(TREZOR)",
-    "ADD_Radio_5_PathCustom": "Custom",
-    "ADD_Label_2": "Create a Nickname ",
-    "ADD_Label_3": "Your wallet is encrypted. Please enter the password. ",
-    "ADD_Label_4": "Add an Account to Watch ",
-    "ADD_Warning_1": "You can add any account to \"watch\" on the wallets tab without uploading a private key. This does ** not ** mean you have access to this wallet, nor can you transfer Ether from it. ",
-    "ADD_Label_5": "Enter the Address ",
-    "ADD_Label_6": "Unlock your Wallet ",
-    "ADD_Label_6_short": "Unlock ",
-    "ADD_Label_7": "Add Account ",
-    "ADD_Label_8": "Password (optional): ",
-    "ADD_Web3Desc": "Connect & Sign via Your Browser or Extension",
-    "ADD_HardwareDesc": "Connect & sign via your hardware wallet",
-    "MYWAL_Nick": "Wallet Nickname ",
-    "MYWAL_Address": "Wallet Address ",
-    "MYWAL_Bal": "Balance ",
-    "MYWAL_Edit": "Edit ",
-    "MYWAL_View": "View ",
-    "MYWAL_Remove": "Remove ",
-    "MYWAL_RemoveWal": "Remove Wallet ",
-    "MYWAL_WatchOnly": "Your Watch-Only Accounts ",
-    "MYWAL_Viewing": "Viewing Wallet ",
-    "MYWAL_Hide": "Hide Wallet Info ",
-    "MYWAL_Edit_2": "Edit Wallet ",
-    "MYWAL_Name": "Wallet Name ",
-    "MYWAL_Content_1": "Warning! You are about to remove your wallet ",
-    "MYWAL_Content_2": "Be sure you have **saved the private key and/or Keystore File and the password** before you remove it. ",
-    "MYWAL_Content_3": "If you want to use this wallet with your MyCrypto CX in the future, you will need to manually re-add it using the private key/JSON and password. ",
-    "GEN_desc": "If you want to generate multiple wallets, you can do so here ",
-    "GEN_Label_1": "Enter a password",
-    "GEN_Placeholder_1": "Do NOT forget to save this! ",
-    "GEN_SuccessMsg": "Success! Your wallet has been generated. ",
-    "GEN_Label_2": "Save your `Keystore` File. ",
-    "GEN_Label_3": "Save Your Address. ",
-    "GEN_Label_4": "Print paper wallet or a QR code. ",
-    "GEN_Aria_1": "Enter a strong password (at least 9 characters)",
-    "GEN_Aria_2": "make password visible",
-    "BULK_Label_1": "Number of Wallets To Generate ",
-    "BULK_Label_2": "Generate Wallets ",
-    "BULK_SuccessMsg": "Success! Your wallets have been generated. ",
-    "SEND_addr": "To Address ",
-    "SEND_amount": "Amount to Send ",
-    "SEND_amount_short": "Amount ",
-    "SEND_custom": "Add Custom Token ",
+    "ADD_Radio_5_PathCustom": "Prilagođen",
+    "ADD_Label_2": "Izradite nadimak ",
+    "ADD_Label_3": "Vaš novčanik je enkriptiran. Molim vas unesite lozinku ",
+    "ADD_Label_4": "Dodaj korisnički račun u nadzor.",
+    "ADD_Warning_1": "Možete dodati bilokoji korisnički račun na  \"watch\" u kartici novčanika bez učitavanja privatnog ključa. Ovo ne znači da ** not ** imate pristup ovom novčaniku, nit da možete prebacivati Ether iz njega. ",
+    "ADD_Label_5": "Unesite svoju adresu ",
+    "ADD_Label_6": "Otključajte svoj novčanik ",
+    "ADD_Label_6_short": "Otključajte ",
+    "ADD_Label_7": "Dodajte korisnički račun ",
+    "ADD_Label_8": "Lozinka (opcionalno): ",
+    "ADD_Web3Desc": "Spojite se i potpišite putem svog preglednika ili proširenja",
+    "ADD_HardwareDesc": "Spojite se i potpišite putem svog hardverskog novčanika",
+    "MYWAL_Nick": "Nadimak novčanika ",
+    "MYWAL_Address": "Asdresa novčanika ",
+    "MYWAL_Bal": "Saldo ",
+    "MYWAL_Edit": "Uredi ",
+    "MYWAL_View": "Pregledaj ",
+    "MYWAL_Remove": "Ukloni ",
+    "MYWAL_RemoveWal": "Ukloni novčanik ",
+    "MYWAL_WatchOnly": "Vaši korisnički računi sam za pregled ",
+    "MYWAL_Viewing": "Gledanje novčanika ",
+    "MYWAL_Hide": "Sakrij informacije novčanika",
+    "MYWAL_Edit_2": "Uredi novčanik ",
+    "MYWAL_Name": "Ime novčanika ",
+    "MYWAL_Content_1": "Upozorenje! Uklonit ćete svoj novčanik ",
+    "MYWAL_Content_2": "Provjerite jeste li  **sačuvali privatni ključ i/ili Keystore datoteku i lozinku** prije nego što ga uklonite. ",
+    "MYWAL_Content_3": "Ako ubuduće želite koristiti ovaj novčanik sa vašim MyCrypto CX, morat ćete ga ponovno unijeti ručno savwašim privatnim ključem/JSON datotekom i lozinkom. ",
+    "GEN_desc": "Ako želite izraditi više novčanika možete to učiniti ovdje ",
+    "GEN_Label_1": "Unesite lozinku",
+    "GEN_Placeholder_1": "NE zaboravite spremiti ovo! ",
+    "GEN_SuccessMsg": "Uspješno! Vaš račun je sada izrađen. ",
+    "GEN_Label_2": "Sačuvajte svoju `Keystore` datoteku. ",
+    "GEN_Label_3": "Sačuvajte svoju adresu. ",
+    "GEN_Label_4": "Ispišite papirnati novčanik ili QR kod. ",
+    "GEN_Aria_1": "Unesite jaku lozinku (najmanje 9 znakova)",
+    "GEN_Aria_2": "učinite lozinku vidljivom",
+    "BULK_Label_1": "Broj novčanika za izraditi ",
+    "BULK_Label_2": "Izradi novčanike ",
+    "BULK_SuccessMsg": "Uspješno! Vaši novčanici su sada izrađeni. ",
+    "SEND_addr": "Na adresu ",
+    "SEND_amount": "Iznos za slanje ",
+    "SEND_amount_short": "Iznos ",
+    "SEND_custom": "Dodaj token po želji ",
     "SEND_gas": "Gas ",
-    "SEND_TransferTotal": "Send Entire Balance ",
-    "SEND_generate": "Generate Transaction ",
-    "SEND_raw": "Raw Transaction ",
-    "SEND_signed": "Signed Transaction ",
-    "SEND_trans": "Send Transaction ",
-    "SENDModal_Title": "Warning! ",
-    "SENDModal_Content_1": "You are about to send ",
-    "SENDModal_Content_2": "to address ",
-    "SENDModal_Content_3": "Are you sure you want to do this? ",
+    "SEND_TransferTotal": "Pošalji sav raspoloživi iznos ",
+    "SEND_generate": "Izradi transakciju",
+    "SEND_raw": "Izvorna transakcija ",
+    "SEND_signed": "Potpisana transakcija ",
+    "SEND_trans": "Pošalji transakciju",
+    "SENDModal_Title": "Upozorenje! ",
+    "SENDModal_Content_1": "Poslat ćete",
+    "SENDModal_Content_2": "na adresu ",
+    "SENDModal_Content_3": "Jeste li sigurni da ovo želite? ",
     "SENDModal_Content_4": "NOTE: If you encounter an error, you most likely need to add ether to your account to cover the gas cost of sending tokens. Gas is paid in ether. ",
     "SENDModal_No": "Cancel",
     "SENDModal_Yes": "Send",
