--- a/common/translations/lang/hr.json
+++ b/common/translations/lang/hr.json
@@ -74,9 +74,8 @@
     "NAV_YourWallets": "Tvoji novčanici ",
     "x_Access": "Pristup ",
     "x_AddessDesc": "Vaša adresa može biti znana i kao vaš broj akaunta `Account #` ili vaš javni ključ `Public Key`. To je ono što dijelite drugima kako bi vam mogli poslati Ether ili tokene. Pronađite obojanu ikonu adrese. Provjerite da li odgovara vašem papirnatom novčaniku kad god negdje upisujete adresu.",
-    "x_Address": "YVaša adresas ",
+    "x_Address": "Vaša adresas ",
     "x_Cancel": "Poništi ",
-    "x_Cipher": "Cipher Browser",
     "x_CSV": "CSV datoteka (nekriptirana) ",
     "x_Download": "Download ",
     "x_Json": "JSON datoteka (nekriptirana) ",
@@ -207,32 +206,32 @@
     "SENDModal_Content_1": "Poslat ćete",
     "SENDModal_Content_2": "na adresu ",
     "SENDModal_Content_3": "Jeste li sigurni da ovo želite? ",
-    "SENDModal_Content_4": "NOTE: If you encounter an error, you most likely need to add ether to your account to cover the gas cost of sending tokens. Gas is paid in ether. ",
-    "SENDModal_No": "Cancel",
-    "SENDModal_Yes": "Send",
-    "TOKEN_Addr": "Address ",
-    "TOKEN_Symbol": "Token Symbol ",
-    "TOKEN_Dec": "Decimals ",
-    "TOKEN_show": "Show All Tokens ",
-    "TOKEN_hide": "Hide Tokens ",
-    "TRANS_desc": "If you want to send Tokens, please use the \"Send Token\" page instead. ",
-    "TRANS_advanced": "+Advanced: Add Data ",
-    "TRANS_data": "Data ",
+    "SENDModal_Content_4": "NAPOMENA: Ako naođete na grešku, vjerojatno morate dodati Ether na vaš korisnički račun kako biste pokrili gas - troškove transakcije. Gas se plaća u Etheru. ",
+    "SENDModal_No": "Poništi",
+    "SENDModal_Yes": "Pošalji",
+    "TOKEN_Addr": "Adresa ",
+    "TOKEN_Symbol": "Simbol tokena ",
+    "TOKEN_Dec": "Decimale ",
+    "TOKEN_show": "Prikaži sve tokene ",
+    "TOKEN_hide": "Sakrij tokene ",
+    "TRANS_desc": "Ako želite slati tokene molim vas koristite \"Send Token\" stranicu umjesto ove.",
+    "TRANS_advanced": "+Napredno: Unesi odatke ",
+    "TRANS_data": "Podaci ",
     "TRANS_gas": "Gas Limit ",
-    "TRANS_sendInfo": "A standard transaction using 21000 gas will cost 0.000441 ETH. We use a slightly-above-minimum gas price of 0.000000021 ETH to ensure it gets mined quickly. We do not take a transaction fee. ",
-    "OFFLINE_Title": "Generate & Send Offline Transaction ",
-    "OFFLINE_Desc": "Generating offline transactions can be done in three steps. You will complete steps 1 and 3 on an online computer, and step 2 on an offline/airgapped computer. This ensures your private keys do not touch an internet-connected device. ",
-    "OFFLLINE_Step1_Title": "Step 1: Generate Information (Online Computer) ",
-    "OFFLINE_Step1_Button": "Generate Information ",
-    "OFFLINE_Step1_Label_1": "From Address ",
-    "OFFLINE_Step1_Label_2": "Note: This is the FROM address, not the TO address. Nonce is generated from the originating account. If using an airgapped computer, it would be the address of the cold-storage account. ",
-    "OFFLINE_Step2_Title": "Step 2: Generate Transaction (Offline Computer) ",
-    "OFFLINE_Step2_Label_1": "To Address ",
-    "OFFLINE_Step2_Label_2": "Value / Amount to Send ",
-    "OFFLINE_Step2_Label_3": "Gas Price ",
-    "OFFLINE_Step2_Label_3b": "This was displayed in Step 1 on your online computer. ",
-    "OFFLINE_Step2_Label_4": "Gas Limit ",
-    "OFFLINE_Step2_Label_4b": "21000 is the default gas limit. When you send contracts or add'l data, this may need to be different. Any unused gas will be returned to you. ",
+    "TRANS_sendInfo": "Standardna transakcija koja troši 21000 gasa će koštati 0.000441 ETH. Mi koristimo cijenu gasa malo iznad minimalne cijene od 0.000000021 ETH kako bismo osigurali da se transakcija obradi brzo. Mi ne naplaćujemo naknadu za transakcije. ",
+    "OFFLINE_Title": "Izradi i pošalji transakciju offline ",
+    "OFFLINE_Desc": "Izrada offline transakcija može biti obavljena u tri koraka. Korake 1 i 3 ćete obaviti na online računalu, a korak 2 na offline/vanmrežnom izoliranom računalu. Na ovaj način ćete osigurati da vaši privatni ključevi nikada ne dođu u dodir sa uređajima spojenima na internet. ",
+    "OFFLLINE_Step1_Title": "Korak 1: Izradite informaciju (Online Računalo) ",
+    "OFFLINE_Step1_Button": "Izrada informacije",
+    "OFFLINE_Step1_Label_1": "Adresa pošiljaoca ",
+    "OFFLINE_Step1_Label_2": "Napomena: Ovo je adresa SA KOJE se šalje a ne NA KOJU se šalje. Jednokratna fraza se generira iz izvornog korisničkog računa. Ako koristite izolirano offline računalo, to bi bila adresa korisničkog računa hladne pohrane cold-storage. ",
+    "OFFLINE_Step2_Title": "Korak 2: Izradite transakciju (Offline računalo) ",
+    "OFFLINE_Step2_Label_1": "Na adresu ",
+    "OFFLINE_Step2_Label_2": "Vrijednost / Iznos za slanje ",
+    "OFFLINE_Step2_Label_3": "Cijena gasa ",
+    "OFFLINE_Step2_Label_3b": "Ovo je bilo prikazano u prvom koraku na vašem online računalu. ",
+    "OFFLINE_Step2_Label_4": "Gas Limit ",tak
+    "OFFLINE_Step2_Label_4b": "21000 je postavljeni gas limit. Kada šaljete ugovore ili dodajete '1 podatke, ovo možda mora biti drugačije. Sav nepotrošeni gas će vam biti vraćen. ",
     "OFFLINE_Step2_Label_5": "Nonce ",
     "OFFLINE_Step2_Label_5b": "This was displayed in Step 1 on your online computer. ",
     "OFFLINE_Step2_Label_6": "Data ",
