--- a/common/translations/lang/hr.json
+++ b/common/translations/lang/hr.json
@@ -225,7 +225,7 @@
     "OFFLLINE_Step1_Title": "Korak 1: Izradite informaciju (Online Računalo) ",
     "OFFLINE_Step1_Button": "Izrada informacije",
     "OFFLINE_Step1_Label_1": "Adresa pošiljaoca ",
-    "OFFLINE_Step1_Label_2": "Napomena: Ovo je adresa SA KOJE se šalje a ne NA KOJU se šalje. Jednokratna fraza se generira iz izvornog korisničkog računa. Ako koristite izolirano offline računalo, to bi bila adresa korisničkog računa hladne pohrane cold-storage. ",
+    "OFFLINE_Step1_Label_2": "Napomena: Ovo je adresa SA KOJE se šalje a ne NA KOJU se šalje. Jednokratni broj se generira iz izvornog korisničkog računa. Ako koristite izolirano offline računalo, to bi bila adresa korisničkog računa hladne pohrane cold-storage. ",
     "OFFLINE_Step2_Title": "Korak 2: Izradite transakciju (Offline računalo) ",
     "OFFLINE_Step2_Label_1": "Na adresu ",
     "OFFLINE_Step2_Label_2": "Vrijednost / Iznos za slanje ",
@@ -233,7 +233,7 @@
     "OFFLINE_Step2_Label_3b": "Ovo je bilo prikazano u prvom koraku na vašem online računalu. ",
     "OFFLINE_Step2_Label_4": "Gas Limit ",
     "OFFLINE_Step2_Label_4b": "21000 je postavljeni gas limit. Kada šaljete ugovore ili dodajete '1 podatke, ovo možda mora biti drugačije. Sav nepotrošeni gas će vam biti vraćen. ",
-    "OFFLINE_Step2_Label_5": "Privremena fraza ",
+    "OFFLINE_Step2_Label_5": "Privremen broj ", 
     "OFFLINE_Step2_Label_5b": "Ovoje bilo prikazano u 1. koraku Tna vašem online računalu. ",
     "OFFLINE_Step2_Label_6": "Podaci ",
     "OFFLINE_Step2_Label_6b": "Ovo je opcionalno. Podaci se často koriste kada šaljete transakcije ugovorima. ",
@@ -300,29 +300,29 @@
     "ERROR_5": "Molimo unesite ispravnu adresu. ",
     "ERROR_6": "Molimo unesite ispravnu lozinku. ",
     "ERROR_7": "Molimo unesite ispravne decimale     (Mora biti cijeli broj. Pokušajte 0-18.) ",
-    "ERROR_8": "Molimo unesite ispravnu gas limit  (Mora biti cijeli broj. Pokušajte 21000-4000000.) ",
-    "ERROR_9": "Please enter a valid data value (Must be hex.) ",
-    "ERROR_10": "Please enter a valid gas price. (Must be integer. Try 20 GWEI / 20000000000 WEI.) ",
-    "ERROR_11": "Please enter a valid nonce      (Must be integer.) ",
-    "ERROR_12": "Invalid signed transaction. ",
-    "ERROR_13": "A wallet with this nickname already exists. ",
-    "ERROR_14": "Wallet not found. ",
-    "ERROR_15": "Whoops. It doesn't look like a proposal with this ID exists yet or there is an error reading this proposal. ",
-    "ERROR_16": "A wallet with this address already exists in storage. Please check your wallets page. ",
-    "ERROR_17": "Account you are sending from does not have enough funds. If sending tokens, you must have 0.01 ETH in your account to cover the cost of gas. ",
-    "ERROR_18": "All gas would be used on this transaction. This means you have already voted on this proposal or the debate period has ended.",
-    "ERROR_19": "Please enter a valid symbol",
-    "ERROR_20": "Not a valid ERC-20 token",
-    "ERROR_21": "Could not estimate gas. There are not enough funds in the account, or the receiving contract address would throw an error. Feel free to manually set the gas and proceed. The error message upon sending may be more informative.",
-    "ERROR_22": "Please enter a valid node name",
-    "ERROR_23": "Please enter a valid URL. If you are on https, your URL must be https",
-    "ERROR_24": "Please enter a valid port. ",
-    "ERROR_25": "Please enter a valid chain ID. ",
-    "ERROR_26": "Please enter a valid ABI. ",
-    "ERROR_27": "Minimum amount: 0.01. Max amount: ",
-    "ERROR_28": "You need this `Keystore File + Password` or the `Private Key` (next page) to access this wallet in the future.  ",
-    "ERROR_29": "Please enter a valid user and password. ",
-    "ERROR_30": "Please enter a valid name (7+ characters, limited punctuation) ",
+    "ERROR_8": "Molimo unesite ispravni gas limit  (Mora biti cijeli broj. Pokušajte 21000-4000000.) ",
+    "ERROR_9": "Molimo unesite ispravni datum. (Mora biti hex.) ",
+    "ERROR_10": "Molimo unesite ispravnu cijenu gasa. (Mora biti cijeli broj. Pokušajte 20 GWEI / 20000000000 WEI.) ",
+    "ERROR_11": "Molimo unesite ispravni privremen broj      (Mora biti cijeli broj.) ",
+    "ERROR_12": "Neispravna potpisana transakcija. ",
+    "ERROR_13": "Novčanik sa ovim nadimkom već postoji. ",
+    "ERROR_14": "Novčanik nije pronađen. ",
+    "ERROR_15": "UPS!. Izgleda da još ne postoji ponuda sa ovim ID ili se javila greška kod čitanja ove ponude. ",
+    "ERROR_16": "Novčanik sa ovom adresom već postoji u pohrani. Molimo provjerite vaše stranice novčanika. ",
+    "ERROR_17": "Korisnički račun sa kojega šaljete nema dovoljno sredstava. Ako šaljete tokene, morate imati 0.01 ETH na svom računu da pokrijete trošak gasa. ",
+    "ERROR_18": "Sav gas bi bio potrošen za ovu transakciju. Ovo znači da ste već glasali o ovom prijedlogu ili da je period debate istekao.",
+    "ERROR_19": "Molimo unestite valjani simbol.",
+    "ERROR_20": "Nije valjani ERC-20 token",
+    "ERROR_21": "Nije moguće procijeniti gas. Na računu nema dovoljno sredstvava, ili bi adresa ugovora primatelja javila grešku. Slobodno ručno namjestite gas i nastavite. Greška nakon slanja je možda više informativna.",
+    "ERROR_22": "Molimo unesite valjano ime čvora",
+    "ERROR_23": "Molimo unesite valjani URL. Ako ste na https, vaš URL mora biti https",
+    "ERROR_24": "Molimo unesite valjani ulaz. ",
+    "ERROR_25": "Molimo unesite valjani ID lanca. ",
+    "ERROR_26": "Molimo unesite valjani ABI. ",
+    "ERROR_27": "Minimalni iznos: 0.01. Maksimalni iznos: ",
+    "ERROR_28": "Trebate ovu `Keystore datoteku + lozinku` ili `Private Key` (sljedeća stranica) kako biste ubuduće pristupili ovom novčaniku.  ",
+    "ERROR_29": "Molimo unesite valjano korisničko ime i lozinku. ",
+    "ERROR_30": "Molimo unesite valjano ime (7+ characters, limited punctuation) ",
     "ERROR_31": "Please enter a valid secret phrase. ",
     "ERROR_32": "Could not connect to the node. Refresh your page, try a different node (upper right corner), check your firewall settings. If custom node, check your configs.",
     "ERROR_33": "The wallet you have unlocked does not match the owner's address. ",
